[Added] Not hardcoded objects with textures

--- a/3DTrophyRoom/3DTrophyRoom/3DTrophyRoom.vcxproj
+++ b/3DTrophyRoom/3DTrophyRoom/3DTrophyRoom.vcxproj
@@ -132,7 +132,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\..\..\..\Pictures\mblock1.png" />
+    <Image Include="mblock1.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
