--- a/3DTrophyRoom/3DTrophyRoom/3DTrophyRoom.vcxproj.filters
+++ b/3DTrophyRoom/3DTrophyRoom/3DTrophyRoom.vcxproj.filters
@@ -52,7 +52,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\..\..\..\Pictures\mblock1.png">
+    <Image Include="mblock1.png">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
