--- a/3DTrophyRoom/3DTrophyRoom/3DTrophyRoom.vcxproj
+++ b/3DTrophyRoom/3DTrophyRoom/3DTrophyRoom.vcxproj
@@ -118,17 +118,23 @@
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="CubeComponent.cpp" />
     <ClCompile Include="DrawComponent.cpp" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="LightComponent.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MoveToComponent.cpp" />
     <ClCompile Include="ObjectModel.cpp" />
+    <ClCompile Include="Vec.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Component.h" />
     <ClInclude Include="CubeComponent.h" />
     <ClInclude Include="DrawComponent.h" />
+    <ClInclude Include="GameObject.h" />
     <ClInclude Include="LightComponent.h" />
+    <ClInclude Include="MoveToComponent.h" />
     <ClInclude Include="ObjectModel.h" />
     <ClInclude Include="stb_image.h" />
+    <ClInclude Include="Vec.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
