[Added] Moving object

--- a/3DTrophyRoom/3DTrophyRoom/3DTrophyRoom.vcxproj.filters
+++ b/3DTrophyRoom/3DTrophyRoom/3DTrophyRoom.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Vec.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RoomComponent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CubeComponent.h">
@@ -69,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Vec.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RoomComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
