--- a/3DTrophyRoom/3DTrophyRoom/3DTrophyRoom.vcxproj
+++ b/3DTrophyRoom/3DTrophyRoom/3DTrophyRoom.vcxproj
@@ -123,6 +123,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MoveToComponent.cpp" />
     <ClCompile Include="ObjectModel.cpp" />
+    <ClCompile Include="RoomComponent.cpp" />
     <ClCompile Include="Vec.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -133,6 +134,7 @@
     <ClInclude Include="LightComponent.h" />
     <ClInclude Include="MoveToComponent.h" />
     <ClInclude Include="ObjectModel.h" />
+    <ClInclude Include="RoomComponent.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="Vec.h" />
   </ItemGroup>
